--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
     "react-tabs": "^6.0.0",
     "sass": "^1.62.0",
