--- a/public/web.config
+++ b/public/web.config
@@ -6,7 +6,7 @@
     </staticContent>
     <rewrite>
       <rules>
-        <rule name="React Routes" stopProcessing="true">
+        <rule name="Next.js" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
