--- a/public/web.config
+++ b/public/web.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
     <rewrite>
       <rules>
         <rule name="Next.js" stopProcessing="true">
