--- a/public/web.config
+++ b/public/web.config
@@ -2,6 +2,7 @@
 <configuration>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+    <directoryBrowse enabled="true" />
     <rewrite>
       <rules>
         <rule name="Next.js" stopProcessing="true">
