--- a/web.config
+++ b/web.config
@@ -7,6 +7,8 @@
 
 <configuration>
   <system.webServer>
+    <directoryBrowse enabled="true" />
+    <modules runAllManagedModulesForAllRequests="true" />
     <!-- Visit http://blogs.msdn.com/b/windowsazure/archive/2013/11/14/introduction-to-websockets-on-windows-azure-web-sites.aspx for more information on WebSocket support -->
     <webSocket enabled="false" />
     <handlers>
