--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "babel-plugin-macros": "^3.1.0",
+    "date-fns": "^2.29.3",
     "downshift": "^7.6.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "^13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
+    "react-select": "^5.7.2",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "sass": "^1.62.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1",
@@ -40,6 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@types/aos": "^3.0.4",
+    "@types/react-datepicker": "^4.10.0",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26"
   }
 }
