--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "downshift": "^7.6.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "next": "^13.3.0",
+    "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
@@ -40,11 +42,14 @@
     "styled-components": "^5.3.9",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@types/aos": "^3.0.4",
+    "@types/axios": "^0.14.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26"
