--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@svgr/webpack": "^7.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
@@ -22,18 +23,21 @@
     "autoprefixer": "10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.0",
     "downshift": "^7.6.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
     "next": "^13.3.0",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "^6.9.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
+    "react-query": "^3.39.3",
     "react-select": "^5.7.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
@@ -52,6 +56,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-slick": "^0.23.10",
+    "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26"
   }
 }
