--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "types": ["dotenv"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -28,8 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/contact-us/api/sendEmail",
-    "src/app/api/send-email/page.tsx"
+    "src/app/contact-us/ContactForm.tsx"
   ],
   "exclude": ["node_modules"]
 }
