--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
@@ -55,6 +56,7 @@
     "@types/axios": "^0.14.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-slick": "^0.23.10",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26"
